--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,15 @@
+
+<div class=container>
+
 <h1>hello from List#show</h1>
+
+<ul>
+  <% @Bookmarks.each do |bookmark| %>
+    <%# <li><%= list.name%></li>
+    <li><%= link_to bookmark.comment, bookmark_path(bookmark.id)%></li>
+  <% end %>
+</ul>
+
+<%= link_to "back to list", lists_path%>
+
+</div>
