--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,1 +1,8 @@
 <h1>hello from Lists#new</h1>
+
+<%= form_with model: @list do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.submit %>
+<% end %>
