--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,8 +1,8 @@
 <h1>hello from Lists#new</h1>
 
-<%= form_with model: @list do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.submit %>
-<% end %>
+<h3>Create a new list</h3>
+        <%= simple_form_for @list do |f| %>
+          <%= f.input :name, placeholder: 'sci-fi' %>
+          <%= f.input :photo, as: :file %>
+          <%= f.submit class: 'btn btn-flat' %>
+        <% end %>
