--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,6 @@
 <h1>hi from Bookmarks#new</h1>
 
-<ul>
+<%# <ul>
   <% @movies.each do |movie| %>
     <%# <li><%= list.name%></li>
     <li><%= link_to movie.name, movie_path(movie.id)%></li>
@@ -9,4 +9,12 @@
 
 <%= link_to "back to list", lists_path%>
 
-</div>
+</div> %>
+
+
+<h3>Add a movie to your <%= @list.name %> list</h3>
+        <%= simple_form_for [@list, @bookmark] do |f| %>
+          <%= f.input :comment, placeholder: "Enter a comment about the movie" %>
+          <%= f.association :movie, prompt: "Select a movie", input_html: {data: {controller: "tom-select"}} %>
+          <%= f.submit class: "btn btn-flat" %>
+        <% end %>
